[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/images/dead_1.png" type="Texture" id=1]
[ext_resource path="res://assets/images/sad_1.png" type="Texture" id=2]
[ext_resource path="res://assets/images/sad_2.png" type="Texture" id=3]
[ext_resource path="res://assets/images/happy_1.png" type="Texture" id=4]
[ext_resource path="res://assets/images/happy_2.png" type="Texture" id=5]
[ext_resource path="res://Teddy.gd" type="Script" id=6]
[ext_resource path="res://assets/images/dialog.png" type="Texture" id=7]
[ext_resource path="res://assets/fonts/Roboto-Medium.ttf" type="DynamicFontData" id=8]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "dead",
"speed": 3.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": false,
"name": "sad",
"speed": 6.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": false,
"name": "happy",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]

size = 18
use_mipmaps = false
use_filter = false
font_data = ExtResource( 8 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Teddy" type="AnimatedSprite"]

position = Vector2( 405.854, 282.26 )
frames = SubResource( 1 )
animation = "happy"
script = ExtResource( 6 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Dialog" type="Sprite" parent="." index="0"]

show_behind_parent = true
position = Vector2( 129.129, -98.9542 )
texture = ExtResource( 7 )
_sections_unfolded = [ "Visibility" ]

[node name="Text" type="Label" parent="Dialog" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -84.0
margin_top = -68.0
margin_right = 101.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="AnimationTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = true

[node name="DialogTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = false

[node name="DeathTween" type="Tween" parent="." index="3"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="animation_finished" from="." to="." method="_on_Teddy_animation_finished"]

[connection signal="timeout" from="DialogTimer" to="." method="_on_DialogTimer_timeout"]


